fix music list overflow
fixed music list overflowing beyond footer.

--- a/css/article.css
+++ b/css/article.css
@@ -576,8 +576,9 @@ img {
 .music-list {
     position: absolute;
     background: var(--clr-green);
-    width: 30%;
+    width: 28%;
     right: 0;
+    bottom: 0;
     opacity: 0;
     pointer-events: none;
     padding: 1em 1.5em;
@@ -659,7 +660,6 @@ img {
   }
 
 
-
 /* FOOTER */
 
 .footer {
@@ -719,7 +719,6 @@ img {
 .footer--contact-cnt {
     margin-right: 10em;
 }
-
 
 
 /* RESPONSIVE MODE */
